addressed issues where scroll bar was showing up for horizontal scroll when unnecessary. also made some changes to make the criteria scroll fill the whole field and manage long variable name.

--- a/app/assets/stylesheets/patient_dashboard.less
+++ b/app/assets/stylesheets/patient_dashboard.less
@@ -58,9 +58,10 @@
   }
 
   th > div > div.tableScroll {
-    padding:8px;
-    max-height:134px;
+    max-height:100%;
+    max-width:100%;
     overflow-y:auto;
+    overflow-x:auto;
     position:absolute;
     bottom: 0;
     left: 0;
